--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UnnamedBoy07 | Official Website</title>
+  <title>UnnamedBoy07 by king | Official Website</title>
   <style>
     body {
       margin: 0;
